# libgdxpp-template

./: .gitignore  CMakeLists.txt  Libgdxpp.project  Libgdxpp.sh  Libgdxpp.workspace  README.md  build.sh  buildAndroid.sh  buildDesktop.sh  rebuildAndroid.sh  rebuildDesktop.sh
.codelite/: Libgdxpp.session  refactoring.db
android/app/: CMakeLists.txt  build.gradle  gdxpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/dependencies/jni/: Application.mk
core/src/: MyAppListener.cpp  MyAppListener.h  main.cpp
